codepkg/objects/Order_Change__c.object
<CustomObject>
    <fields>
        <fullName>Account_Role__c</fullName>
        <label>Account Role</label>
        <referenceTo>Account_Role__c</referenceTo>
        <relationshipName>Order_changes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Has_Homeowner_provided_check_payment__c</fullName>
        <description>Has the Homeowner provided a contribution check/payment for the change order?</description>
        <inlineHelpText>Has the Homeowner provided a contribution check/payment for the change order?</inlineHelpText>
        <label>Has Homeowner provided check/payment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Homeowner_check_payment_amount__c</fullName>
        <description>Change order Homeowner contribution check/payment amount</description>
        <inlineHelpText>Change order Homeowner contribution check/payment amount</inlineHelpText>
        <label>Homeowner check/payment amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Order Change</label>
    <nameField>
        <displayFormat>OC-{0000}</displayFormat>
        <label>Order Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>